tests/paczka2/big_fuzzy/30977096.err
Error in line 3: QnSkT9 A647 45,1
Error in line 4: S852 S754 32,2
Error in line 14: QnSkT9 A647 48,6
Error in line 19: QnSkT9 S754 51,3
Error in line 18: mUb S754 13,3
Error in line 27: xdxKW A942 46,1
Error in line 46: mUb A942 90,8
Error in line 61: QnSkT9 S75) 55,0
Error in line 42: QnSkT9 S852 44,0
Error in line 71: JmBC1Wx A942 85,3
Error in line 84: oTz0t A647 46,24
Error in line 89: oTz0t A647 2,3
Error in line 91: oTz0t S852 77,3
Error in line 87: BS7jB3hy A647 99,8
Error in line 105: JmBC1Wx A942 88,3
Error in line 125: S852 A942 13,5
Error in line 138: xdxKW S852 69,2
Error in line 136: JmBC1Wx A647 45,7
Error in line 133: oTz0t A942 35,1
Error in line 131: QnSkT9 A647 269,4
Error in line 140: xdxKW A942 1,4
Error in line 146: xdxKW S852 31,0
Error in line 145: QnSkT9 S754 42,4
Error in line 154: QnSkT9 A647 98,2
Error in line 164: mUb 852 92,8
Error in line 171: xdxKW S852 57,4
Error in line 179: BS7jB3hy A942 53,2
Error in line 195: QnSkT9 S754 42,3
Error in line 210: JmBC1Wx S754 41,8
Error in line 209: BS7jB3hy A647 10,5
Error in line 187: oTz0t S852 48,7
Error in line 212: BS7jB3hy S852 36,6
Error in line 205: QnSkT9 A942 320,2
Error in line 208: S852 S754 75,8
Error in line 216: BS7jB3hy A647 86,1
Error in line 228: BS7jB3hy A942 44,1
Error in line 224: QnSkT9 A942 22,4
Error in line 240: S852 A942 54,8
